front end bug